new dataset logic inputed into relativization script

--- a/data_processing/relative.ipynb
+++ b/data_processing/relative.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "9ad70ecc",
    "metadata": {},
    "outputs": [],
@@ -56,8 +56,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3d768dd",
+   "metadata": {},
+   "source": [
+    "# Join Collections"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "id": "802db303",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collection wifi_client_data has 67340 documents\n",
+      "Collection wifi_client_data_1 has 43360 documents\n",
+      "Processed wifi_client_data (1/2)\n",
+      "Processed wifi_client_data_1 (2/2)\n",
+      "Output collection wifi_client_data_global has 110700 documents\n",
+      "Expected total (sum of inputs): 110700\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "110700"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "def union_collections_preserve_duplicates(collections_to_join, output_collection):\n",
+    "    \n",
+    "    # Verify input collections exist and get counts\n",
+    "    input_counts = {}\n",
+    "    for coll_name in collections_to_join:\n",
+    "        if coll_name not in db.list_collection_names():\n",
+    "            raise ValueError(f\"Collection {coll_name} does not exist\")\n",
+    "        input_counts[coll_name] = db[coll_name].count_documents({})\n",
+    "        print(f\"Collection {coll_name} has {input_counts[coll_name]} documents\")\n",
+    "    \n",
+    "    # Create a pipeline that adds source collection info and merges\n",
+    "    pipelines = []\n",
+    "    \n",
+    "    # First pipeline creates the output collection with modified _id\n",
+    "    first_coll = collections_to_join[0]\n",
+    "    pipelines.append([\n",
+    "        {\"$addFields\": {\n",
+    "            \"original_id\": \"$_id\",\n",
+    "            \"_id\": {\"$concat\": [first_coll, \"||\", {\"$toString\": \"$_id\"}]},\n",
+    "            \"source_collection\": first_coll\n",
+    "        }},\n",
+    "        {\"$out\": output_collection}\n",
+    "    ])\n",
+    "    \n",
+    "    # Subsequent pipelines merge with modified _id\n",
+    "    for coll_name in collections_to_join[1:]:\n",
+    "        pipelines.append([\n",
+    "            {\"$addFields\": {\n",
+    "                \"original_id\": \"$_id\",\n",
+    "                \"_id\": {\"$concat\": [coll_name, \"||\", {\"$toString\": \"$_id\"}]},\n",
+    "                \"source_collection\": coll_name\n",
+    "            }},\n",
+    "            {\"$merge\": {\n",
+    "                \"into\": output_collection,\n",
+    "                \"whenMatched\": \"fail\",  # Shouldn't happen with our new _id scheme\n",
+    "                \"whenNotMatched\": \"insert\"\n",
+    "            }}\n",
+    "        ])\n",
+    "    \n",
+    "    # Execute all pipelines\n",
+    "    for i, (coll_name, pipeline) in enumerate(zip(collections_to_join, pipelines)):\n",
+    "        db[coll_name].aggregate(pipeline)\n",
+    "        print(f\"Processed {coll_name} ({i+1}/{len(collections_to_join)})\")\n",
+    "    \n",
+    "    # Verify the output\n",
+    "    output_count = db[output_collection].count_documents({})\n",
+    "    expected_total = sum(input_counts.values())\n",
+    "    print(f\"Output collection {output_collection} has {output_count} documents\")\n",
+    "    print(f\"Expected total (sum of inputs): {expected_total}\")\n",
+    "    \n",
+    "    if output_count != expected_total:\n",
+    "        print(f\"Warning: Output count doesn't match sum of input collections\")\n",
+    "    \n",
+    "    return output_count\n",
+    "\n",
+    "# Example usage\n",
+    "union_collections_preserve_duplicates(\n",
+    "    collections_to_join=[\"wifi_client_data\", \"wifi_client_data_1\"],\n",
+    "    output_collection=\"wifi_client_data_global\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "eaa99930",
    "metadata": {},
    "outputs": [],
@@ -88,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "247f556b",
    "metadata": {},
    "outputs": [],
@@ -237,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "4e0dcffa",
    "metadata": {},
    "outputs": [
@@ -245,9 +347,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully processed 23621 documents into wifi_data_reto_grande\n",
-      "Successfully processed 23146 documents into wifi_data_reto_medio\n",
-      "Successfully processed 1267 documents into wifi_data_reto_pequeno\n"
+      "Successfully processed 19393 documents into wifi_data_reto_grande\n",
+      "Successfully processed 21140 documents into wifi_data_reto_medio\n",
+      "Successfully processed 23533 documents into wifi_data_reto_pequeno\n",
+      "Successfully processed 19318 documents into wifi_data_equilatero_grande\n",
+      "Successfully processed 21845 documents into wifi_data_equilatero_medio\n"
      ]
     }
    ],
@@ -269,11 +373,21 @@
     "        \"end\":datetime(2025, 5, 13, 23, 53),\n",
     "        \"origin\":calculate_centroid((1,1),(2,1),(1,2))\n",
     "    },\n",
+    "    \"equilatero_grande\": {\n",
+    "        \"start\":datetime(2025, 6, 28, 19, 45),\n",
+    "        \"end\":datetime(2025, 6, 28, 21, 15),\n",
+    "        \"origin\":calculate_centroid((0,0),(4,0),(2,4))\n",
+    "    },\n",
+    "    \"equilatero_medio\": {\n",
+    "        \"start\":datetime(2025, 6, 28, 22, 5),\n",
+    "        \"end\":datetime(2025, 6, 28, 23, 30),\n",
+    "        \"origin\":calculate_centroid((1,1),(2,1),(2,3))\n",
+    "    },\n",
     "}\n",
     "collection = db[\"wifi_client_data\"]\n",
     "\n",
     "for triangle_name in triangle_dictionary.keys(): \n",
-    "    input_collection = \"wifi_client_data\"\n",
+    "    input_collection = \"wifi_client_data_global\"\n",
     "    current_triangle = triangle_dictionary[triangle_name]\n",
     "    start_time  = current_triangle[\"start\"]\n",
     "    end_time    = current_triangle[\"end\"]\n",
