--- a/validation/model_per_dataset_validation/Validate_Checkpoints_Subsets.ipynb
+++ b/validation/model_per_dataset_validation/Validate_Checkpoints_Subsets.ipynb
@@ -27,10 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "8dddacb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch: 2.7.0\n",
+      "CUDA available: True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import os, glob, pickle, json\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "e1dd51f2",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
     "\n",
     "# Choose ONE of the two: either a single checkpoint path, or a directory to iterate all checkpoints.\n",
     "CKPT = \"\"  # e.g., \"/mnt/data/model_storage/outdoor_only_run0_depth3_model5.ckpt\"\n",
-    "CKPT_DIR = \"/mnt/data/model_storage\"  # folder of .ckpt files, or \"\" to ignore\n",
+    "CKPT_DIR = \"/home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage\"  # folder of .ckpt files, or \"\" to ignore\n",
     "\n",
     "# Validation subsets: choose any of [\"garage\", \"outdoor\", \"indoor\", \"all\"] and/or \"collections\".\n",
     "SUBSETS = [\"garage\", \"outdoor\", \"indoor\"]\n",
@@ -84,7 +93,7 @@
     "DB_NAME = \"wifi_fingerprinting_data\"\n",
     "\n",
     "# Where to find best model pickles if you didn't save sidecar .arch.json files\n",
-    "PKL_GLOB = \"/mnt/data/best_models_*.pkl\"\n",
+    "PKL_GLOB = \"/home/admindi/sbenites/WirelessLocation/**/best_models_*.pkl\"\n",
     "\n",
     "# Forward-pass batch size\n",
     "BATCH_SIZE = 4096\n"
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "74077b28",
    "metadata": {},
    "outputs": [],
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5a18d68d",
    "metadata": {},
    "outputs": [],
@@ -188,21 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "f592b7ca",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 🔁 Patch: also try to read the architecture from checkpoint hyperparameters\n",
+    "import torch\n",
     "\n",
-    "import os, glob, json, pickle\n",
-    "from typing import Dict, Any\n",
+    "def _maybe_arch_from_hp(hp):\n",
+    "    if not isinstance(hp, dict):\n",
+    "        return None\n",
+    "    # Obvious candidates first\n",
+    "    for cand in [\"config\", \"architecture_config\", \"arch_config\", \"model_config\", \"architecture\", \"cnn_config\"]:\n",
+    "        if cand in hp and isinstance(hp[cand], dict):\n",
+    "            return hp[cand]\n",
+    "    # Heuristic fallback: if hp itself looks like an arch dict, use it\n",
+    "    likely_keys = {\"layers\",\"conv\",\"conv_blocks\",\"fc_layers\",\"activation\",\"dropout\",\"hidden_sizes\",\"kernel_size\"}\n",
+    "    if any(k in hp for k in likely_keys):\n",
+    "        return hp\n",
+    "    return None\n",
     "\n",
-    "def find_arch_config_for_ckpt(ckpt_path: str, pkl_glob: str) -> Dict[str, Any]:\n",
-    "    \"\"\"\n",
-    "    Try in order:\n",
-    "    1) Sidecar JSON next to the checkpoint (same base name + .arch.json)\n",
-    "    2) Any best_models_*.pkl files that contain dicts with {'name': <ckpt_stem>, 'config': {...}}\n",
-    "    \"\"\"\n",
+    "# Re-define find_arch_config_for_ckpt with hyperparams fallback\n",
+    "def find_arch_config_for_ckpt(ckpt_path: str, pkl_glob: str):\n",
+    "    import os, glob, json, pickle\n",
     "    ckpt_stem = os.path.splitext(os.path.basename(ckpt_path))[0]\n",
     "\n",
     "    # 1) Sidecar JSON\n",
@@ -216,8 +234,8 @@
     "        except Exception as e:\n",
     "            print(f\"⚠️ Failed to read sidecar {sidecar}: {e}\")\n",
     "\n",
-    "    # 2) Look through pickles\n",
-    "    candidates = glob.glob(pkl_glob)\n",
+    "    # 2) best_models_*.pkl\n",
+    "    candidates = glob.glob(pkl_glob, recursive=True)\n",
     "    for pkl_path in candidates:\n",
     "        try:\n",
     "            with open(pkl_path, \"rb\") as f:\n",
@@ -229,10 +247,21 @@
     "        except Exception as e:\n",
     "            print(f\"⚠️ Could not read {pkl_path}: {e}\")\n",
     "\n",
+    "    # 3) Fallback: try the checkpoint's hyperparameters\n",
+    "    try:\n",
+    "        ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
+    "        hp = ckpt.get(\"hyper_parameters\") or ckpt.get(\"hparams\") or ckpt.get(\"hyperparams\")\n",
+    "        cfg = _maybe_arch_from_hp(hp)\n",
+    "        if cfg is not None:\n",
+    "            print(\"🧩 Recovered config from checkpoint hyperparameters\")\n",
+    "            return cfg\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Failed to inspect checkpoint hyperparameters: {e}\")\n",
+    "\n",
     "    raise RuntimeError(\n",
     "        \"Could not find architecture config for:\\n\"\n",
     "        f\"  {ckpt_path}\\n\"\n",
-    "        \"Please provide a sidecar JSON or ensure the checkpoint base name exists in one of your best_models_*.pkl files.\"\n",
+    "        \"Provide a sidecar JSON or ensure the best_models_*.pkl for this run includes this exact model name.\"\n",
     "    )\n"
    ]
   },
@@ -246,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "81d39d57",
    "metadata": {},
    "outputs": [],
@@ -304,10 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "297a3bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2240 checkpoint(s).\n",
+      " - /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model0.ckpt\n",
+      " - /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model1.ckpt\n",
+      " - /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model2.ckpt\n",
+      " - /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model3.ckpt\n",
+      " - /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model4.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "if CKPT and CKPT_DIR:\n",
@@ -340,10 +382,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "f0437e33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "\n",
+      "====================================================================================================\n",
+      "Checkpoint: /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model0.ckpt\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Could not find architecture config for:\n  /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model0.ckpt\nProvide a sidecar JSON or ensure the best_models_*.pkl for this run includes this exact model name.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[58]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m + \u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m100\u001b[39m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCheckpoint:\u001b[39m\u001b[33m\"\u001b[39m, ckpt_path)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m arch_config = \u001b[43mfind_arch_config_for_ckpt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mckpt_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPKL_GLOB\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m subset_name, collections \u001b[38;5;129;01min\u001b[39;00m subset_to_collections.items():\n\u001b[32m     21\u001b[39m     X_val, y_val = load_val_data(collections, DB_NAME)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 57\u001b[39m, in \u001b[36mfind_arch_config_for_ckpt\u001b[39m\u001b[34m(ckpt_path, pkl_glob)\u001b[39m\n\u001b[32m     54\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     55\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m⚠️ Failed to inspect checkpoint hyperparameters: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m     58\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mCould not find architecture config for:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     59\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mckpt_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     60\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mProvide a sidecar JSON or ensure the best_models_*.pkl for this run includes this exact model name.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     61\u001b[39m )\n",
+      "\u001b[31mRuntimeError\u001b[39m: Could not find architecture config for:\n  /home/admindi/sbenites/WirelessLocation/validation/model_per_dataset_validation/model_storage/all_data_run0_depth0_model0.ckpt\nProvide a sidecar JSON or ensure the best_models_*.pkl for this run includes this exact model name."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Build subsets selected for this run\n",
@@ -385,30 +450,27 @@
     "df = pd.DataFrame(results).sort_values([\"checkpoint\", \"subset\"]).reset_index(drop=True)\n",
     "df\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9416265",
-   "metadata": {},
-   "source": [
-    "## 💾 (Optional) Save Results to CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa94db1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "out_csv = \"/mnt/data/validation_results.csv\"\n",
-    "df.to_csv(out_csv, index=False)\n",
-    "print(\"Saved:\", out_csv)\n"
-   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "location-env",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
