i did too many things to count

--- a/validation/model_per_dataset_validation/tranodm.ipynb
+++ b/validation/model_per_dataset_validation/tranodm.ipynb
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[outdoor_only] outliers removed: 1 / 23 (kept 22)\n",
+      "[outdoor_only] outliers removed: 2 / 23 (kept 21)\n",
       "=== Averages by (model_group, dataset) — cleaned (IQR) — group: outdoor_only ===\n"
      ]
     },
@@ -114,25 +114,25 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_2495d_row0_col0, #T_2495d_row0_col1, #T_2495d_row0_col3, #T_2495d_row0_col4 {\n",
+       "#T_727ce_row0_col0, #T_727ce_row0_col1, #T_727ce_row0_col3, #T_727ce_row0_col4 {\n",
        "  background-color: #006837;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_2495d_row0_col2 {\n",
+       "#T_727ce_row0_col2 {\n",
        "  background-color: #a50026;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_2495d\">\n",
+       "<table id=\"T_727ce\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_2495d_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_2495d_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_2495d_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_2495d_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_2495d_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_727ce_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_727ce_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_727ce_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_727ce_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_727ce_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -146,19 +146,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_2495d_level0_row0\" class=\"row_heading level0 row0\" >outdoor_only</th>\n",
-       "      <th id=\"T_2495d_level1_row0\" class=\"row_heading level1 row0\" >outdoor</th>\n",
-       "      <td id=\"T_2495d_row0_col0\" class=\"data row0 col0\" >9.57</td>\n",
-       "      <td id=\"T_2495d_row0_col1\" class=\"data row0 col1\" >134.37</td>\n",
-       "      <td id=\"T_2495d_row0_col2\" class=\"data row0 col2\" >-0.51</td>\n",
-       "      <td id=\"T_2495d_row0_col3\" class=\"data row0 col3\" >11.50</td>\n",
-       "      <td id=\"T_2495d_row0_col4\" class=\"data row0 col4\" >134.55</td>\n",
+       "      <th id=\"T_727ce_level0_row0\" class=\"row_heading level0 row0\" >outdoor_only</th>\n",
+       "      <th id=\"T_727ce_level1_row0\" class=\"row_heading level1 row0\" >outdoor</th>\n",
+       "      <td id=\"T_727ce_row0_col0\" class=\"data row0 col0\" >5.52</td>\n",
+       "      <td id=\"T_727ce_row0_col1\" class=\"data row0 col1\" >49.82</td>\n",
+       "      <td id=\"T_727ce_row0_col2\" class=\"data row0 col2\" >0.44</td>\n",
+       "      <td id=\"T_727ce_row0_col3\" class=\"data row0 col3\" >6.97</td>\n",
+       "      <td id=\"T_727ce_row0_col4\" class=\"data row0 col4\" >50.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d53f4dd7f0>"
+       "<pandas.io.formats.style.Styler at 0x72fcbc7657f0>"
       ]
      },
      "metadata": {},
@@ -177,16 +177,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_e9637\">\n",
+       "<table id=\"T_b89ef\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_e9637_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_e9637_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_e9637_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_e9637_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_e9637_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_b89ef_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_b89ef_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_b89ef_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_b89ef_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_b89ef_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -203,7 +203,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -222,16 +222,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_132ab\">\n",
+       "<table id=\"T_f9c69\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_132ab_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_132ab_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_132ab_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_132ab_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_132ab_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_f9c69_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_f9c69_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_f9c69_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_f9c69_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_f9c69_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -248,7 +248,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -267,16 +267,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_9855f\">\n",
+       "<table id=\"T_36551\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_9855f_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_9855f_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_9855f_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_9855f_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_9855f_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_36551_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_36551_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_36551_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_36551_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_36551_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -293,7 +293,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -312,16 +312,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_78870\">\n",
+       "<table id=\"T_98926\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_78870_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_78870_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_78870_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_78870_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_78870_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_98926_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_98926_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_98926_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_98926_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_98926_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -338,7 +338,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -357,16 +357,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_32fe7\">\n",
+       "<table id=\"T_b048d\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_32fe7_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_32fe7_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_32fe7_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_32fe7_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_32fe7_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_b048d_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_b048d_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_b048d_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_b048d_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_b048d_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -383,7 +383,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -402,16 +402,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_96b48\">\n",
+       "<table id=\"T_9f946\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_96b48_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_96b48_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_96b48_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_96b48_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_96b48_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_9f946_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_9f946_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_9f946_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_9f946_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_9f946_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -428,7 +428,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
@@ -447,16 +447,16 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_29ced\">\n",
+       "<table id=\"T_fa93a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank\" >&nbsp;</th>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_29ced_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
-       "      <th id=\"T_29ced_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
-       "      <th id=\"T_29ced_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
-       "      <th id=\"T_29ced_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
-       "      <th id=\"T_29ced_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
+       "      <th id=\"T_fa93a_level0_col0\" class=\"col_heading level0 col0\" >mae</th>\n",
+       "      <th id=\"T_fa93a_level0_col1\" class=\"col_heading level0 col1\" >mse</th>\n",
+       "      <th id=\"T_fa93a_level0_col2\" class=\"col_heading level0 col2\" >r2</th>\n",
+       "      <th id=\"T_fa93a_level0_col3\" class=\"col_heading level0 col3\" >rmse</th>\n",
+       "      <th id=\"T_fa93a_level0_col4\" class=\"col_heading level0 col4\" >val_loss</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model_group</th>\n",
@@ -473,7 +473,7 @@
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x78d544cdb250>"
+       "<pandas.io.formats.style.Styler at 0x72fcbdf63250>"
       ]
      },
      "metadata": {},
