CNN_validation and traingles generation

--- a/validation/re_train_arch/best_models.ipynb
+++ b/validation/re_train_arch/best_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1707cf21",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,8 @@
     "#\"CNN_only_relative_xy\",\n",
     "#\"CNN_extra_features_no_leak_xy_free\",\n",
     "#\"CNN_extra_features_no_leaking\",\n",
-    "\"CNN_final_meters\",\n",
+    "#\"CNN_final_meters\",\n",
+    "\"CNN_final_delta\"\n",
     "]\n",
     "\n",
     "model_dict:dict = {}\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a7c0eb94",
    "metadata": {},
    "outputs": [
@@ -104,7 +105,8 @@
     "    #\"CNN_final_raw\" : [],\n",
     "    #\"CNN_only_relative_xy\" : [],\n",
     "    #\"CNN_extra_features_no_leak_xy_free\" : [],\n",
-    "    \"CNN_final_meters\" : [],\n",
+    "    #\"CNN_final_meters\" : [],\n",
+    "    \"CNN_final_delta\" : []\n",
     "}\n",
     "for current_group,all_runs in model_dict.items():\n",
     "\n",
